# foxglove

./: .metadata  LICENSE  README.md  c_cpp_properties.json  pubspec.yaml
.github/workflows/: build.yaml  ci.yaml  clang-format.yaml
core/: CMakeLists.txt  events.cc  events.h  globals.cc  globals.h  player.h  player_environment.h  test.cc
core/base/: aixlog.hpp  closure.h  error_details.cc  error_details.h  logging.cc  logging.h  make_copyable.h  message_window.cc  message_window.h  rref.h  single_thread_dispatcher.cc  single_thread_dispatcher.h  status.h  string_utils.cc  string_utils.h  task_queue.cc  task_queue.h  thread_checker.h  thread_safe_map.h
core/media/: media.h  media_info.h  media_source.h  playlist.h
core/video/: d3d.h  d3d11_output.h  pixel_buffer_output.h  video_dimensions.h  video_output.h  video_output_factory.h
core/vlc/: vlc_d3d11_context.cc  vlc_d3d11_context.h  vlc_d3d11_output.cc  vlc_d3d11_output.h  vlc_environment.cc  vlc_environment.h  vlc_media.cc  vlc_media.h  vlc_media_list_player.cc  vlc_media_list_player.h  vlc_pixel_buffer_output.cc  vlc_pixel_buffer_output.h  vlc_player.cc  vlc_player.h  vlc_player_impl.h  vlc_playlist.cc  vlc_playlist.h  vlc_video_output.h
example/: .metadata  README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: foxglove.dart
lib/src/: base.dart  enums.dart  finalizing_player_proxy.dart  method_channel_player.dart  platform_log_config.dart  player.dart  player_platform.dart  player_state.dart
lib/src/media/: media.dart  media_source.dart  playlist.dart
lib/src/media_source/: media.dart  media_source.dart  playlist.dart
lib/src/widgets/: video.dart
test/: foxglove_test.dart
windows/: CMakeLists.txt  aixlog.hpp  flutter_task_runner.h  foxglove_plugin.cc  foxglove_plugin.cpp  foxglove_plugin.h  foxglove_plugin_c_api.cc  logging.cc  logging.h  main_thread_dispatcher.cc  main_thread_dispatcher.h  message_window.h  method_channel_handler.cc  method_channel_handler.h  method_channel_utils.cc  method_channel_utils.h  player_bridge.cc  player_bridge.h  player_channels.cc  player_channels.h  player_events.h  player_registry.h  plugin_state.h  resource_registry.cc  resource_registry.h
windows/include/foxglove/: foxglove_plugin.h  foxglove_plugin_c_api.h
windows/video/: texture_registry.cc  texture_registry.h  video_outlet.cc  video_outlet.h  video_outlet_base.cc  video_outlet_base.h  video_outlet_d3d.cc  video_outlet_d3d.h
